2021-09-16 Jan Kotanski <jan.kotanski@desy.de>
	* convert maximal value of intensity level values to the default ones
	* add cloud hints mono/RGB radio buttons
	* tagged as 2.66.1

2021-09-14 Jan Kotanski <jan.kotanski@desy.de>
	* add RGB histograms for pyqtgraph
	* adopt specialized tools for RGB images
	* tagged as 2.66.0

2021-09-06 Jan Kotanski <jan.kotanski@desy.de>
	* fix for passing results of the Maxima tool
	* fix deprecation warnings
	* tagged as 2.65.1

2021-08-31 Jan Kotanski <jan.kotanski@desy.de>
	* move the general tools into ScrollArea
	* fix for storing autofactor
	* tagged as 2.65.0

2021-08-06 Jan Kotanski <jan.kotanski@desy.de>
	* fix for fetching metadata in partial image source
	* tagged as 2.64.2

2021-08-06 Jan Kotanski <jan.kotanski@desy.de>
	* add mutex for PyTine.get command in imageSources
	* use TIFLoader when fabio does not work
	* tagged as 2.64.1

2021-07-30 Jan Kotanski <jan.kotanski@desy.de>
	* add the --no-space-instance command line parameter
	* improve implementation of the currenttime() methods with tzlocal import
	* tagged as 2.64.0

2021-06-11 Jan Kotanski <jan.kotanski@desy.de>
	* fix for py2 H5CppVirtualFieldLayout call
	* tagged as 2.63.3

2021-05-25 Jan Kotanski <jan.kotanski@desy.de>
	* fix for cbf reading
	* tagged as 2.63.2

2021-05-25 Jan Kotanski <jan.kotanski@desy.de>
	* fix for loading cbf metadata in py3
	* tagged as 2.63.1

2021-05-25 Jan Kotanski <jan.kotanski@desy.de>
	* load cbf memory data with fabio 0.11.0 if available
	* tagged as 2.63.0

2021-05-19 Jan Kotanski <jan.kotanski@desy.de>
	* fix for sourcepath for asapo image source
	* tagged as 2.62.1

2021-05-07 Jan Kotanski <jan.kotanski@desy.de>
	* add sourcepath for asapo image source
	* tagged as 2.62.0

2021-04-30 Jan Kotanski <jan.kotanski@desy.de>
	* remove bytearray flag
	* tagged as 2.61.1

2021-04-09 Jan Kotanski <jan.kotanski@desy.de>
	* maximal type value added to a negative mask value
	* update h5 wrappers
	* tagged as 2.61.0
