@@ -1,6 +1,7 @@
 2021-09-16 Jan Kotanski <jan.kotanski@desy.de>
 	* convert maximal value of intensity level values to the default ones
 	* add cloud hints mono/RGB radio buttons
+	* fix setting intensity levels when histogram is off
 	* tagged as 2.66.1
 
 2021-09-14 Jan Kotanski <jan.kotanski@desy.de>
